# ExperimEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  ExperimEngineConfig.h.in  LICENSE  README.md
data/scripts/: BasicScript.lua
includes/SDL2/: version.txt
includes/glm/: version.txt
includes/sol/: sol.hpp  version.txt
libs/SDL2/: version.txt
libs/lua/: lua51.lib  luajit.lib  version.txt
src/: Application.cpp  Application.hpp  CMakeLists.txt  EngineParameters.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineParameters.hpp
src/engine/log/: CMakeLists.txt  ExpengineLog.hpp
src/engine/render/: CMakeLists.txt  Color.cpp  Color.hpp  IRendering.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  RenderingContext.cpp  RenderingContext.hpp  Window.cpp  Window.hpp
src/engine/render/imgui/: CMakeLists.txt  ImGuiBackend.cpp  ImGuiBackend.hpp  ImGuiContextWrapper.hpp  ImGuiViewportPlatformData.hpp  ImGuiViewportRendererData.hpp  ImguiLog.cpp  ImguiLog.hpp  UIPlatformBackendSDL.cpp  UIPlatformBackendSDL.hpp  UIRendererBackend.cpp  UIRendererBackend.hpp
src/engine/render/imgui/impl/: CMakeLists.txt  ImGuiContextWrapper.hpp  ImGuiViewportPlatformData.hpp  ImguiBackend.cpp  ImguiBackend.hpp  ImguiContext.hpp  PlatformBackendData.hpp  PlatformBackendSDL.cpp  PlatformBackendSDL.hpp  RendererBackendVulkan.cpp  RendererBackendVulkan.hpp  UIPlatformBackendSDL.cpp  UIPlatformBackendSDL.hpp  UIRendererBackendVulkan.cpp  UIRendererBackendVulkan.hpp
src/engine/render/imgui/lib/: CMakeLists.txt  version.txt
src/engine/render/imgui/spirv/: imgui_shaders_spirv.h
src/engine/render/imgui/vlk/: CMakeLists.txt  UIRendererBackendVulkan.cpp  UIRendererBackendVulkan.hpp  VlkUIRendererBackend.cpp  VlkUIRendererBackend.hpp
src/engine/render/imgui/vlk/spirv/: vlk_imgui_shaders_spirv.h
src/engine/render/imgui/wgpu/: CMakeLists.txt  WGpuUIRendererBackend.cpp  WGpuUIRendererBackend.hpp
src/engine/render/imgui/wgpu/spirv/: wgpu_imgui_shaders_spirv.h
src/engine/render/imgui/widgets/: CMakeLists.txt  ImguiLog.cpp  ImguiLog.hpp
src/engine/render/resources/: CMakeLists.txt  Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
src/engine/render/vlk/: CMakeLists.txt  RenderingContext.cpp  VlkCapabilities.cpp  VlkCapabilities.hpp  VlkCommandBuffer.cpp  VlkCommandBuffer.hpp  VlkDebug.cpp  VlkDebug.hpp  VlkDevice.cpp  VlkDevice.hpp  VlkDispatch.cpp  VlkDispatch.hpp  VlkFrameCommandBuffer.cpp  VlkFrameCommandBuffer.hpp  VlkInclude.hpp  VlkMemoryAllocator.cpp  VlkMemoryAllocator.hpp  VlkMemoryImplementation.cpp  VlkRenderer.cpp  VlkRenderer.hpp  VlkRenderingContext.cpp  VlkRenderingContext.hpp  VlkSwapchain.cpp  VlkSwapchain.hpp  VlkTools.cpp  VlkTools.hpp  VlkWindow.cpp  VlkWindow.hpp
src/engine/render/vlk/resources/: CMakeLists.txt  VlkBuffer.cpp  VlkBuffer.hpp  VlkImage.cpp  VlkImage.hpp  VlkTexture.cpp  VlkTexture.hpp
src/engine/render/wgpu/: CMakeLists.txt  WGpuRenderer.cpp  WGpuRenderer.hpp  WGpuRenderingContext.cpp  WGpuRenderingContext.hpp  WebGPURenderer.cpp  WebGPURenderer.hpp
src/engine/render/wgpu/resources/: CMakeLists.txt  WGpuTexture.cpp  WGpuTexture.hpp
src/engine/utils/: CMakeLists.txt  Flags.hpp  Timer.cpp  Timer.hpp  Utils.hpp
src/render/: Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/render/imgui/: CMakeLists.txt  ImguiLog.hpp
src/render/imgui/lib/: CMakeLists.txt
src/render/vlk/: VlkCapabilities.cpp  VlkCapabilities.hpp  VlkDebug.cpp  VlkDebug.hpp  VlkInclude.hpp
src/test/: Quicktest.cpp  Quicktest.hpp
src/tests/: Application.cpp  Application.hpp  CMakeLists.txt
src/tests/lua/: CMakeLists.txt  Quicktest.cpp  Quicktest.hpp
tools/emscripten/: index.html
